reorganizes files and adds introduction for set example

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -17150,6 +17150,20 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PRA7WMHZ/Mostafavi - 2017 - A System-of-Systems Approach for Integrated Resili.pdf:application/pdf},
 }
 
+@article{julie_kozeracki_pathways_2024,
+	title = {Pathways to Commercial Liftoff: Advanced Nuclear},
+	url = {https://liftoff.energy.gov/wp-content/uploads/2024/09/LIFTOFF_DOE_AdvNuclear-vX6.pdf},
+	abstract = {The Pathways to Commercial Liftoff reports aim to establish a common fact base with the private sector around
+the path to liftoff for critical clean energy technologies. Their goal is to catalyze more rapid and coordinated
+action across the value chain for deployment. The Nuclear Liftoff Report was published in March 2023 as a
+“living document” to be updated as the market evolved. This updated report, published September 2024, adds
+new content and refreshes original content.},
+	author = {{Julie Kozeracki} and {Chris Vlahoplus} and {Ken Erwin} and {Alan Propp} and {Sonali Razdan} and {Rasheed Auguste} and {Tim Stuhldreher} and {Christina Walrond} and {Melissa Bates} and {Erica Bickford} and {Andrew Foss} and {Derek Gaston} and {Cheryl Herman} and {Rory Stanley} and {Billy Valderrama} and {Katheryn Scott} and {Tomotaroh Granzier-Nakajima} and {Paul Donohoo-Vallett} and {Tom Fanning} and {Brent Dixon} and {Abdalla Abou Jaoude} and {Chris Lohse}},
+	date = {2024-09},
+	langid = {english},
+	file = {Pathways to Commercial Liftoff Advanced Nuclear.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/39JBX7AI/Pathways to Commercial Liftoff Advanced Nuclear.pdf:application/pdf},
+}
+
 @article{ross_intersections_2022,
 	title = {Intersections of disadvantaged communities and renewable energy potential: Data set and analysis to inform equitable investment prioritization in the United States},
 	volume = {41},
@@ -20646,4 +20660,69 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	date = {2018-12-01},
 	keywords = {Energy planning, Energy Ratio analysis, Energy Return on Investment, Renewable electricity},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PCNES6GM/Walmsley et al. - 2018 - Energy Ratio analysis and accounting for renewable and non-renewable electricity generation A revie.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/XD8VVPFT/S1364032118306774.html:text/html},
+}
+
+@article{barnhart_importance_2013,
+	title = {On the importance of reducing the energetic and material demands of electrical energy storage},
+	volume = {6},
+	issn = {1754-5706},
+	url = {https://pubs.rsc.org/en/content/articlelanding/2013/ee/c3ee24040a},
+	doi = {10.1039/C3EE24040A},
+	abstract = {Two prominent low-carbon energy resources, wind and sunlight, depend on weather. As the percentage of electricity supply from these sources increases, grid operators will need to employ strategies and technologies, including energy storage, to balance supply with demand. We quantify energy and material resource requirements for currently available energy storage technologies: lithium ion (Li-ion), sodium sulfur ({NaS}) and lead-acid ({PbA}) batteries; vanadium redox ({VRB}) and zinc-bromine ({ZnBr}) flow batteries; and geologic pumped hydroelectric storage ({PHS}) and compressed air energy storage ({CAES}). By introducing new concepts, including energy stored on invested ({ESOI}), we map research avenues that could expedite the development and deployment of grid-scale energy storage. {ESOI} incorporates several storage attributes instead of isolated properties, like efficiency or energy density. Calculations indicate that electrochemical storage technologies will impinge on global energy supplies for scale up — {PHS} and {CAES} are less energy intensive by 100 fold. Using {ESOI} we show that an increase in electrochemical storage cycle life by tenfold would greatly relax energetic constraints for grid-storage and improve cost competitiveness. We find that annual material resource production places tight limits on Li-ion, {VRB} and {PHS} development and loose limits on {NaS} and {CAES}. This analysis indicates that energy storage could provide some grid flexibility but its build up will require decades. Reducing financial cost is not sufficient for creating a scalable energy storage infrastructure. Most importantly, for grid integrated storage, cycle life must be improved to improve the scalability of battery technologies. As a result of the constraints on energy storage described here, increasing grid flexibility as the penetration of renewable power generation increases will require employing several additional techniques including demand-side management, flexible generation from base-load facilities and natural gas firming.},
+	pages = {1083--1092},
+	number = {4},
+	journaltitle = {Energy \& Environmental Science},
+	shortjournal = {Energy Environ. Sci.},
+	author = {Barnhart, Charles J. and Benson, Sally M.},
+	urldate = {2025-06-02},
+	date = {2013-03-20},
+	langid = {english},
+	note = {Publisher: The Royal Society of Chemistry},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/ZU5TKJ7J/Barnhart and Benson - 2013 - On the importance of reducing the energetic and material demands of electrical energy storage.pdf:application/pdf;Supplementary Information PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/NQFZ67KX/Barnhart and Benson - 2013 - On the importance of reducing the energetic and material demands of electrical energy storage.pdf:application/pdf},
+}
+
+@online{noauthor_frequently_nodate,
+	title = {Frequently Asked Questions ({FAQs}) - U.S. Energy Information Administration ({EIA})},
+	url = {https://www.eia.gov/tools/faqs/faq.php?id=74&t=11},
+	abstract = {Energy Information Administration - {EIA} - Official Energy Statistics from the U.S. Government},
+	urldate = {2025-06-03},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/IPRMH73H/faq.html:text/html},
+}
+
+@report{wigeland_nuclear_2014-2,
+	location = {Idaho Falls, {ID}},
+	title = {Nuclear Fuel Cycle Evaluation and Screening– Final Report},
+	pages = {51},
+	number = {{INL}/{EXT}-14-31465},
+	institution = {Idaho National Laboratory},
+	type = {Fuel Cycle Research And Development},
+	author = {Wigeland, R and Taiwo, T and Ludewig, H and Todosow, M and Halsey, W and Gehin, J and Jubin, R and Buelt, J and Stockinger, S and Jenni, K},
+	date = {2014-10-08},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/VA9QCUQ8/Wigeland et al. - NuclearFuelCycle Evaluationand Screening– FinalReport.pdf:application/pdf},
+}
+
+@report{king_potential_2025,
+	title = {The Potential for Geothermal Energy to Meet Growing Data Center Electricity Demand},
+	url = {https://rhg.com/research/geothermal-data-center-electricity-demand/},
+	abstract = {Growing electricity demand from new data centers, particularly driven by the explosive growth of artificial intelligence ({AI}), has quickly become an important topic in energy and technology circles. Though…},
+	pages = {20},
+	institution = {Rhodium Group},
+	author = {King, Ben and Ricks, Wilson and Pastorek, Nathan and Larsen, John},
+	urldate = {2025-06-06},
+	date = {2025-03-11},
+	langid = {british},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/UGKVDN58/2025 - The Potential for Geothermal Energy to Meet Growing Data Center Electricity Demand.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/86JQDSYB/geothermal-data-center-electricity-demand.html:text/html},
+}
+
+@incollection{tsoulfanidis_review_2013,
+	location = {La Grange Park, {IL}, {USA}},
+	title = {Review of the Nuclear Fuel Cycle},
+	isbn = {978-0-89448-460-5},
+	pages = {1--26},
+	booktitle = {The Nuclear Fuel Cycle},
+	publisher = {American Nuclear Society ({ANS})},
+	author = {Tsoulfanidis, Nicolas},
+	date = {2013},
+	langid = {english},
 }
