--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -84,5 +84,9 @@
 \acro{sfr}[SFR]{sodium-cooled fast reactor}
 \acro{ffh}[FFH]{fusion hybrid reactor}
 \acro{est}[EST]{Evaluation and Screening Team}
+\acro{foak}[FOAK]{first-of-a-kind}
+\acro{fco}[FCO]{Fuel Cycle Options Campaign}
+\acro{doe}[DOE]{Department of Energy}
+\acro{lcoe}[LCOE]{levelized cost of electricity}
 
 
