--- a/docs/tables/summary_data.tex
+++ b/docs/tables/summary_data.tex
@@ -6,9 +6,11 @@ EG &  &  &  &  \\
 EG01 & once-through & PWR & Not promising & True \\
 EG02 & once-through & HTGR & Not promising & True \\
 EG03 & once-through & HWR & Not promising & True \\
+\rowcolor{yellow}
 EG04 & once-through & SFR & Less promising & True \\
 EG05 & once-through & HTGR & Not promising & True \\
 EG06 & once-through & FFH & Potentially promising & True \\
+\rowcolor{yellow}
 EG07 & once-through & ADS & Potentially promising & False \\
 EG08 & once-through & FFH & Potentially promising & True \\
 EG09 & limited-recycle & SFR & Potentially promising & True \\
@@ -35,7 +37,9 @@ EG29 & continuous-recycle & SFR & Most promising & True \\
 EG30 & continuous-recycle & SFR & Most promising & True \\
 EG31 & continuous-recycle & SFR & Not promising & True \\
 EG32 & continuous-recycle & SFR & Not promising & True \\
+\rowcolor{yellow}
 EG33 & continuous-recycle & ADS & Potentially promising & False \\
+\rowcolor{yellow}
 EG34 & continuous-recycle & ADS & Potentially promising & False \\
 EG35 & continuous-recycle & ADS & Not promising & False \\
 EG36 & continuous-recycle & ADS & Not promising & True \\
