adds note in red about interview patterns

--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -1,5 +1,11 @@
 \section{Introduction}
 
+\textcolor{red}{Note for later: One of the key patterns I found in the interviews was
+that, although many interviewees were empathetic to justice-related efforts and 
+initiatives, those initiatives were delegated to a dedicated person or department
+within governing institutions. This suggests there is more work to be done 
+integrating energy justice and energy modeling/policy-making}
+
 Earlier chapters introduced a novel modeling tool, \ac{osier}, which sought to
 fill a gap in the literature and available modeling tools by developing a
 flexible multi-objective optimization framework that allows users to incorporate
