draft of set tool

--- a/docs/5-examples/50-intro.tex
+++ b/docs/5-examples/50-intro.tex
@@ -4,4 +4,4 @@ energy mix to power a hypothetical data center.
 
 \input{5-examples/51-set-tool}
 
-\input{5-examples/52-data-center}
+% \input{5-examples/52-data-center}
