--- a/docs/tables/summary_data.tex
+++ b/docs/tables/summary_data.tex
@@ -3,11 +3,15 @@
  & Fuel Cycle Type & Reactor Type & EST Conclusion & Pareto Optimal \\
 EG &  &  &  &  \\
 \midrule
+\rowcolor{orange}
 EG01 & once-through & PWR & Not promising & True \\
+\rowcolor{orange}
 EG02 & once-through & HTGR & Not promising & True \\
+\rowcolor{orange}
 EG03 & once-through & HWR & Not promising & True \\
-\rowcolor{yellow}
+\rowcolor{lime}
 EG04 & once-through & SFR & Less promising & True \\
+\rowcolor{orange}
 EG05 & once-through & HTGR & Not promising & True \\
 EG06 & once-through & FFH & Potentially promising & True \\
 \rowcolor{yellow}
@@ -16,32 +20,45 @@ EG08 & once-through & FFH & Potentially promising & True \\
 EG09 & limited-recycle & SFR & Potentially promising & True \\
 EG10 & limited-recycle & MSR & Less promising & True \\
 EG11 & limited-recycle & SFR & Not promising & False \\
+\rowcolor{orange}
 EG12 & limited-recycle & HWR & Not promising & True \\
+\rowcolor{orange}
 EG13 & limited-recycle & PWR & Not promising & True \\
 EG14 & limited-recycle & SFR & Less promising & True \\
+\rowcolor{orange}
 EG15 & limited-recycle & SFR & Not promising & True \\
 EG16 & limited-recycle & ADS & Not promising & False \\
+\rowcolor{orange}
 EG17 & limited-recycle & PWR & Not promising & True \\
+\rowcolor{orange}
 EG18 & limited-recycle & PWR & Not promising & True \\
+\rowcolor{orange}
 EG19 & continuous-recycle & HWR & Not promising & True \\
+\rowcolor{orange}
 EG20 & continuous-recycle & HWR & Not promising & True \\
+\rowcolor{orange}
 EG21 & continuous-recycle & PWR & Not promising & True \\
+\rowcolor{orange}
 EG22 & continuous-recycle & PWR & Not promising & True \\
 EG23 & continuous-recycle & SFR & Most promising & True \\
 EG24 & continuous-recycle & SFR & Most promising & True \\
+\rowcolor{orange}
 EG25 & continuous-recycle & PWR & Not promising & True \\
 EG26 & continuous-recycle & MSR & Potentially promising & True \\
 EG27 & continuous-recycle & SFR & Not promising & False \\
 EG28 & continuous-recycle & SFR & Potentially promising & True \\
 EG29 & continuous-recycle & SFR & Most promising & True \\
 EG30 & continuous-recycle & SFR & Most promising & True \\
+\rowcolor{orange}
 EG31 & continuous-recycle & SFR & Not promising & True \\
+\rowcolor{orange}
 EG32 & continuous-recycle & SFR & Not promising & True \\
 \rowcolor{yellow}
 EG33 & continuous-recycle & ADS & Potentially promising & False \\
 \rowcolor{yellow}
 EG34 & continuous-recycle & ADS & Potentially promising & False \\
 EG35 & continuous-recycle & ADS & Not promising & False \\
+\rowcolor{orange}
 EG36 & continuous-recycle & ADS & Not promising & True \\
 EG37 & continuous-recycle & SFR & Potentially promising & True \\
 EG38 & continuous-recycle & SFR & Potentially promising & True \\
