adds checkpoint feature to data center solve

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20592,7 +20592,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	author = {Rachmawati, Lily and Srinivasan, Dipti},
 	urldate = {2025-05-28},
 	date = {2009-08},
-	keywords = {Computational efficiency, Computational modeling, Convergence, Degradation, Evolutionary computation, Genetic algorithms, Knee, Measurement, multiobjective evolutionary algorithm ({MOEA}), multiobjective optimization, Optimal control, Pareto optimization, preference, Testing},
+	keywords = {Evolutionary computation, Measurement, Computational modeling, multiobjective optimization, Degradation, Computational efficiency, Testing, Pareto optimization, Optimal control, Convergence, Genetic algorithms, Knee, multiobjective evolutionary algorithm ({MOEA}), preference},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/3GPD8CW9/Rachmawati and Srinivasan - 2009 - Multiobjective Evolutionary Algorithm With Controllable Focus on the Knees of the Pareto Front.pdf:application/pdf},
 }
 
@@ -20610,7 +20610,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	author = {Richter, Jennifer and Bernstein, Michael J. and Farooque, Mahmud},
 	urldate = {2025-05-28},
 	date = {2022-05-01},
-	keywords = {Consent-based siting, Nuclear, Nuclear energy, Nuclear waste, Participatory technology assessment, Public engagement},
+	keywords = {Nuclear energy, Nuclear, Nuclear waste, Public engagement, Consent-based siting, Participatory technology assessment},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/K485J3GZ/Richter et al. - 2022 - The process to find a process for governance Nuclear waste management and consent-based siting in t.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/VJXEQ9VM/S2214629621005600.html:text/html},
 }
 
@@ -20627,7 +20627,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	author = {Tuler, Seth P. and Webler, Thomas},
 	urldate = {2025-05-28},
 	date = {2023-01-01},
-	keywords = {Consent, Decision making, Nuclear waste, Q method, Siting},
+	keywords = {Siting, Nuclear waste, Decision making, Consent, Q method},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/SG2UFXPS/Tuler and Webler - 2023 - Controversy and consensus in the design of a consent-based siting process for radioactive waste.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/QQ7R6DJI/S2214629622004091.html:text/html},
 }
 
@@ -20658,7 +20658,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	author = {Walmsley, Timothy G. and Walmsley, Michael R. W. and Varbanov, Petar S. and Klemeš, Jiří J.},
 	urldate = {2025-06-02},
 	date = {2018-12-01},
-	keywords = {Energy planning, Energy Ratio analysis, Energy Return on Investment, Renewable electricity},
+	keywords = {Energy planning, Renewable electricity, Energy Ratio analysis, Energy Return on Investment},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PCNES6GM/Walmsley et al. - 2018 - Energy Ratio analysis and accounting for renewable and non-renewable electricity generation A revie.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/XD8VVPFT/S1364032118306774.html:text/html},
 }
 
@@ -20725,4 +20725,17 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	author = {Tsoulfanidis, Nicolas},
 	date = {2013},
 	langid = {english},
+}
+
+@online{swinhoe_meta_2024,
+	title = {Meta announces 4 million sq ft, 2GW Louisiana data center campus},
+	url = {https://www.datacenterdynamics.com/en/news/meta-announces-4-million-sq-ft-louisiana-data-center-campus/},
+	abstract = {Company officially confirms reports of campus in the Pelican State},
+	titleaddon = {Data Center Dynamics},
+	type = {Commercial},
+	author = {Swinhoe, Dan and Skidmore, Zachary},
+	urldate = {2025-06-22},
+	date = {2024-12-05},
+	langid = {english},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/Z2QIDM47/meta-announces-4-million-sq-ft-louisiana-data-center-campus.html:text/html},
 }
