--- a/analysis/scripts/05-examples-scripts/datacenter_example.ipynb
+++ b/analysis/scripts/05-examples-scripts/datacenter_example.ipynb
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "de5b1cd4",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Checkpoint: <pymoo.algorithms.moo.nsga2.NSGA2 object at 0x30a20e330>\n"
+      "Loaded Checkpoint: <pymoo.algorithms.moo.nsga2.NSGA2 object at 0x30a20e330>\n",
+      "     2 |      200 |     36 |  0.0304887507 |         ideal\n",
+      "     3 |      300 |     56 |  0.1119234201 |         nadir\n"
      ]
     }
    ],
