--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20681,11 +20681,15 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/ZU5TKJ7J/Barnhart and Benson - 2013 - On the importance of reducing the energetic and material demands of electrical energy storage.pdf:application/pdf;Supplementary Information PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/NQFZ67KX/Barnhart and Benson - 2013 - On the importance of reducing the energetic and material demands of electrical energy storage.pdf:application/pdf},
 }
 
-@online{noauthor_frequently_nodate,
-	title = {Frequently Asked Questions ({FAQs}) - U.S. Energy Information Administration ({EIA})},
+@online{energy_information_administration_how_2024,
+	title = {How much carbon dioxide is produced per kilowatthour of U.S. electricity generation?},
 	url = {https://www.eia.gov/tools/faqs/faq.php?id=74&t=11},
 	abstract = {Energy Information Administration - {EIA} - Official Energy Statistics from the U.S. Government},
+	titleaddon = {Energy Information Administration},
+	type = {Government},
+	author = {{Energy Information Administration}},
 	urldate = {2025-06-03},
+	date = {2024-12-11},
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/IPRMH73H/faq.html:text/html},
 }
 
@@ -20738,4 +20742,30 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	date = {2024-12-05},
 	langid = {english},
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/Z2QIDM47/meta-announces-4-million-sq-ft-louisiana-data-center-campus.html:text/html},
+}
+
+@online{constellation_energy_constellation_2025,
+	title = {Constellation, Meta Sign 20-Year Deal for Clean, Reliable Nuclear Energy in Illinois},
+	url = {https://www.constellationenergy.com/newsroom/2025/constellation-meta-sign-20-year-deal-for-clean-reliable-nuclear-energy-in-illinois.html},
+	abstract = {Constellation and Meta have signed a 20-year power purchase agreement ({PPA}) for the output of the Clinton Clean Energy Center to support Meta’s clean energy goals and operations in the region with 1,121 megawatts of emissions-free nuclear energy.},
+	titleaddon = {Constellation Energy},
+	type = {Commercial},
+	author = {{Constellation Energy}},
+	urldate = {2025-06-22},
+	date = {2025-06-03},
+	langid = {english},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/XXW7UUYD/constellation-meta-sign-20-year-deal-for-clean-reliable-nuclear-energy-in-illinois.html:text/html},
+}
+
+@online{shaw_microsoft_2024,
+	title = {Microsoft and Constellation sign {PPA} for Three Mile Island restart},
+	url = {https://www.power-technology.com/news/constellation-microsoft-three-mile-island/},
+	abstract = {Constellation Energy and Microsoft will work on the restart of a nuclear unit at the Three Miles Island power plant.},
+	titleaddon = {Power Technology},
+	type = {Commercial},
+	author = {Shaw, Alfie},
+	urldate = {2025-06-22},
+	date = {2024-09-23},
+	langid = {american},
+	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/H5RM7SLW/constellation-microsoft-three-mile-island.html:text/html},
 }
