--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -57,6 +57,7 @@
 \acro{mca}[MCA]{municipal choice aggregation}
 \acro{imea}[IMEA]{Illinois Municipal Electric Agency}
 \acro{ppa}[PPA]{power purchase agreement}
+\acrodefplural{ppa}[PPAs]{power purchase agreements}
 \acro{pypsa}[\texttt{PyPSA}]{Python for Power Systems Analysis}
 \acro{lib}[LiB]{lithium-ion battery}
 \acrodefplural{lib}[LiBs]{lithium-ion batteries}
