--- a/docs/tables/datacenter_tech_options_annotated.tex
+++ b/docs/tables/datacenter_tech_options_annotated.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lllllll}
 \toprule
- & NaturalGas Conv & NaturalGas Adv & SolarPanel & Battery & Nuclear & Nuclear Adv \\
+Metric & NaturalGas Conv & NaturalGas Adv & SolarPanel & Battery & Nuclear & Nuclear Adv \\
 \midrule
 capital cost (1/kW) \cite{national_renewable_energy_laboratory_2023_2023}& 0.00165 & 0.00292 & 0.00107 & 0.00141 & 0.00749 & 0.00894 \\
 om cost fixed (1/kW) \cite{national_renewable_energy_laboratory_2023_2023}& 3.7e-05 & 6.61e-05 & 1.68e-05 & 3.7e-05 & 0.000175 & 0.000136 \\
