--- a/analysis/scripts/05-examples-scripts/datacenter_example.ipynb
+++ b/analysis/scripts/05-examples-scripts/datacenter_example.ipynb
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "de5b1cd4",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
     "                    verbose=True)\n",
     "    # save results\n",
     "    print('Saving simulation results')\n",
-    "    with open(\"datacenter_results_EROI\", \"wb\") as file:\n",
+    "    with open(\"datacenter_results_EROI.pkl\", \"wb\") as file:\n",
     "        pickle.dump(res, file)\n",
     "    # save final checkpoint\n",
     "    timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
